HiveQL: added non-hive-rolling-etl.q for Infobright- (and other db-)friendly event file format             - DONE need UPLOAD
HiveQL: added version handling (v_tracker, v_collector, v_etl) (fixes #42)                                 - DONE
Serde: bumped to 0.5.0                                                                                     - DONE need UPLOAD
Serde: added ignore_errors option to avoid throwing exceptions on a bad field, fixes #52 (thanks mtibben!) - 
Serde: tabs are changed to 4 spaces, fixes #61                                                             - DONE
Serde: browser features are now also available as individual fields, for non-hive-rolling-etl.q to use     - DONE
Serde: added version handling (v_tracker, v_collector, v_etl)                                              - DONE
EmrEtlRunner: bumped to 0.0.3                                                                              - DONE
EmrEtlRunner: moved 3 .rb files in lib/ into lib/snowplow-emr-etl-runner                                   - DONE
EmrEtlRunner: added/updated configuration options (:etl: section and hiveql versioning params)             - 

Version 0.5.0 (2012-10-24)
--------------------------
Tidied up folder structure inside 3-etl/
Serde: assembles to /target, not to /upload any more (and jars won't be committed to Git)
EmrEtlRunner: added. Ruby application to run Hive ETL process on Amazon EMR

Version 0.4.10 (2012-10-10)
---------------------------
SnowCannon: bumped submodule to latest shermozle/SnowCannon commit
HiveQL: moved app_id to end of table for backwards compatibility
HiveQL: fixed bug where pointing to serde 0.4.8 NOT new serde 0.4.9

Version 0.4.9 (2012-10-01)
--------------------------
Serde: fixed bug where row not nulled if a critical field un-parseable
Serde: added support for new application ID (#33)
Serde: added deserialization of ecommerce fields, plus tests (#34, #51)
Serde: test suite enhancements (adding Scala helper objects)